# youbi-whisper

./: .gitignore  PLAN.md  pyproject.toml  start.cmd  start.sh  项目运行部署报告.md
migrations/: 20260625_add_whisper_sub_stage.sql  20260716_add_dialogue_srt_url.sql
sql/: asr_raw_fixed_diff_ratio.sql  asr_segment_text_len_distribution.sql  yd_asr_segment_text_len_distribution.sql
tests/: test_dubbing_chunk_aligned.py  test_failed_task_completion.py  test_known_text_alignment.py  test_local_export.py  test_model_cache_logging.py  test_narration_input.py  test_no_speech.py  test_source_transcription.py  test_sources.py
ydbi_whisper/: __init__.py  api.py  asr_segments.py  compare_asr_segments.py  config.py  db.py  local_export.py  local_test.py  logging_utils.py  main.py  semantic_caption.py  service.py  sources.py  stages.py  storage.py  task_info.py  video_info.py  whisper_asr.py  worker.py  youtube.py
