[project]
name = "ydbi-whisper"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "minio>=7.2.0",
  "mysql-connector-python>=9.0.0",
  "openai-whisper",
  "pydub",
  "whisperx",
]

[project.scripts]
ydbi-whisper = "ydbi_whisper.main:main"
ydbi-whisper-api = "ydbi_whisper.api:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"
