[project]
name = "ydbi-whisper"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "minio>=7.2.0",
  "mysql-connector-python>=9.0.0",
  "openai-whisper",
  "pydub",
  "pysbd>=0.3.4",
  "whisperx",
  "wtpsplit>=2.1.6",
]

[project.scripts]
ydbi-whisper = "ydbi_whisper.main:main"
ydbi-whisper-api = "ydbi_whisper.api:main"
ydbi-whisper-test = "ydbi_whisper.local_test:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"
